--- a/nginx/nginx.toml
+++ b/nginx/nginx.toml
@@ -3,6 +3,6 @@ keys        = [ "/app/helloworld" ]
 owner       = "nginx"
 mode        = "0644"
 src         = "nginx.conf.tmpl"
-dest        = "/etc/nginx/sites-enabled/app.conf"
+dest        = "/etc/nginx/nginx.conf"
 check_cmd   = "/usr/sbin/nginx -t -c /etc/nginx/nginx.conf"
 reload_cmd  = "/usr/sbin/service nginx reload"
