--- a/nginx/nginx.toml
+++ b/nginx/nginx.toml
@@ -5,4 +5,4 @@ mode        = "0644"
 src         = "nginx.conf.tmpl"
 dest        = "/etc/nginx/nginx.conf"
 check_cmd   = "/usr/sbin/nginx -t -c /etc/nginx/nginx.conf"
-reload_cmd  = "/usr/sbin/service nginx reload"
+reload_cmd  = "/usr/sbin/nginx -s reload"
