--- a/services/helloworld-dist@.service
+++ b/services/helloworld-dist@.service
@@ -12,7 +12,7 @@ ExecStart=/bin/sh -c "/usr/bin/docker run --rm \
             --name helloworld-%i \
             rckclmbr/helloworld"
 ExecStartPost=/bin/sh -c "sleep 1; /usr/bin/etcdctl set /app/helloworld/%i $(docker port helloworld-%i 5000)"
-ExecStop=/usr/bin/docker stop helloworld-%i
+ExecStop=/usr/bin/docker kill helloworld-%i
 ExecStopPost=/usr/bin/etcdctl rm /app/helloworld/%i
 User=core
 
